# OS_Proj_4_NoVirus

./: CMakeLists.txt  README.md
3way-mpi/: compile.sh  proj4_mpi.c  run.sh
3way-openmp/: compile.sh  proj4_openmp.c  run.sh
3way-pthread/: FillerFile.txt  compile.sh  proj4_pthread.c  pthread.c  run.sh
Data Sheets/MPI/: mpi_10Nodes_1CpuPerTask.csv  mpi_1Node_10CpuPerTask_Fast.csv  mpi_1Node_5CpuPerTask_Fast.csv
Data Sheets/OpenMP/: openmp_10Node_1CpuPerTask_Fast.csv  openmp_1Node_10CpuPerTask_Fast.csv  openmp_1Node_1CpuPerTask_Fast.csv
MPI Jobs/: mpi_1Node_1CpuPerTask.csv  mpi_1Node_5CpuPerTask_Slow.csv
